gccida/c0/assemble_end_function
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assemble_end_function/src/varasm.c:1728:43: error: use of undeclared identifier 'off_8A2198'
sprintf( label, "*.%s%u", ( const char *)&off_8A2198, ( unsigned int)++assemble_end_function_labelno); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assemble_end_function/src/varasm.c:1728:72: error: use of undeclared identifier 'assemble_end_function_labelno'
sprintf( label, "*.%s%u", ( const char *)&off_8A2198, ( unsigned int)++assemble_end_function_labelno); 
                                                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assemble_end_function/src/varasm.c:1729:52: error: use of undeclared identifier 'off_8A2198'
fprintf( asm_out_file, ".%s%u:\n", ( const char *)&off_8A2198, ( unsigned int)assemble_end_function_labelno); 
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assemble_end_function/src/varasm.c:1729:79: error: use of undeclared identifier 'assemble_end_function_labelno'
fprintf( asm_out_file, ".%s%u:\n", ( const char *)&off_8A2198, ( unsigned int)assemble_end_function_labelno); 
                                                                              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assemble_end_function/src/obj/varasm.o] Error 1
